--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 	<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet"> 
 
+	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Dancing+Script:wght@500&display=swap" rel="stylesheet"> 
+
 
 	<style>
 		body{
@@ -73,9 +75,25 @@
 
 		#experiences{
 			margin-top: 70px;
-			padding-bottom: 50px;			
+			padding-bottom: 50px;		
+		}
+		
+		footer{
+			position: relative;
+			left:0px;
+			height: 100px;
+			margin: 0px;
+			width: 105%;
+			background-color: rgba(17,17,17, 0.8);
+			color: rgba(255, 221, 3, 0.7);
+			text-align: center;
+			font-size: 16px;
+			font-family: 'Comfortaa', cursive;	
 		}
 
+		footer p{
+			padding-top: 30px;
+			}
 
 	</style>
 
@@ -158,17 +176,15 @@
 </div>
 
 
+<footer>
 
 
-<!--
-<section>
+	<p> All rights reserved. &#169 2021 Tasnim Hasem</p>
+	
 
-	<h1>Aotoshi, u dumbass.</h1>
+</footer>
 
-	<h2>Yes I can make webpages.</h2>
 
-</section> 
--->
 
 </div>
 
