--- a/index.html
+++ b/index.html
@@ -10,13 +10,38 @@
 
 
 	<style>
+
+
+		 @media only screen and (max-device-width: 480px) {
+			html,body{
+   				width: 100%;
+				height: 100%;
+  				margin: 0px;
+ 				padding: 0px;
+				overflow-x: hidden;
+			}
+  		  }
+
+
+		html,body{
+   			width: 100%;
+  			margin: 0px;
+ 			padding: 0px;
+		}
+
 		body{
-		background-image: url(https://coolbackgrounds.io/images/unsplash/anders-jilden-medium-5d01610e.jpg);
-		font-family: "Dancing Script", cursive;
-		color: white;
-		overflow-y:scroll;
-		overflow-x: hidden;
-		}	
+			background-image: url(https://coolbackgrounds.io/images/unsplash/anders-jilden-medium-5d01610e.jpg);
+			background-repeat: no-repeat;
+			background-size: auto 200%;
+			font-family: "Dancing Script", cursive;
+			color: white;
+			overflow-x:hidden;
+		} 
+
+
+		#content{
+		}
+	
 		
 		section{
 			position: fixed;
@@ -25,7 +50,8 @@
 			color: #ffffff;
 			text-align: center;
 			font-family: 'Dancing Script', cursive;
-			}
+		}
+
 		h1{
 			font-size: 40px;
 		}
@@ -53,7 +79,7 @@
 			padding-right: 1900px;
 			border: solid 2px rgba(255,255,255, 0.5);
 			border-radius: 10px;
-			}
+		}
 	
 		#right-side{
 			position: absolute;
@@ -61,13 +87,18 @@
 			top: 20px;
 			width: 1200px;
 			text-align: left;
-			}
+		}
 
 
 		#bottom-section{
 			position: relative;
-			top: 400px;
-			}
+			top: 450px;
+			width: 100%;
+		}
+
+		#projects, #experiences, #about-me{
+			padding: 0px 8px 0px 8px;
+		}
 
 		#projects{
 			margin-top: 70px;	
@@ -80,10 +111,9 @@
 		
 		footer{
 			position: relative;
-			left:0px;
 			height: 100px;
 			margin: 0px;
-			width: 105%;
+			width: 100vw;
 			background-color: rgba(17,17,17, 0.8);
 			color: rgba(255, 221, 3, 0.7);
 			text-align: center;
@@ -92,8 +122,8 @@
 		}
 
 		footer p{
-			padding-top: 30px;
-			}
+			padding-top: 40px;
+		}
 
 	</style>
 
@@ -101,6 +131,8 @@
 </head>
 
 <body>
+
+<div id="content">
 
 <div class="top-section">
 	
@@ -112,7 +144,7 @@
 
 		<h1> Biography </h1>
 	
-		<hr style="color:rgba(150,150,150,0.8);">
+		<hr style="color:rgba(150,150,150,0.8); width:100%;">
 
 		<h2> Name: Tasnim Hasem </h2>
 		<h2> School: Sunnydale </h2>
@@ -128,6 +160,8 @@
 
 <div id="bottom-section">
 
+<div id="about-me">
+
 <h3> About me </h3>
 
 <hr style="color:rgba(255,255,255,0.7);">
@@ -139,6 +173,8 @@
 	<p>
 	Enim facilisis gravida neque convallis a cras semper auctor neque. Non pulvinar neque laoreet suspendisse interdum consectetur libero id faucibus. Ut tristique et egestas quis. Eu ultrices vitae auctor eu augue ut lectus. Blandit volutpat maecenas volutpat blandit aliquam. A cras semper auctor neque vitae tempus quam pellentesque nec. At auctor urna nunc id cursus metus aliquam eleifend mi. Scelerisque eu ultrices vitae auctor eu augue ut lectus arcu. Auctor elit sed vulputate mi sit amet mauris. Hendrerit gravida rutrum quisque non tellus orci ac auctor augue. At elementum eu facilisis sed. Amet dictum sit amet justo. Dictumst vestibulum rhoncus est pellentesque elit. In hac habitasse platea dictumst quisque sagittis purus sit. Pharetra convallis posuere morbi leo urna molestie at elementum eu. Donec pretium vulputate sapien nec.</p>
 </span>
+
+</div>
 
 <div id=projects>
 
@@ -183,7 +219,6 @@
 	
 
 </footer>
-
 
 
 </div>
