--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<style>
 
-
+		/* for mobiles */
 		 @media only screen and (max-device-width: 480px) {
 			html,body{
    				width: 100%;
@@ -20,6 +20,11 @@
  				padding: 0px;
 				overflow-x: hidden;
 			}
+			
+			#projects, #experiences, #about-me{
+				padding: 0px 8px 0px 40px;
+			}
+
   		  }
 
 
@@ -97,7 +102,7 @@
 		}
 
 		#projects, #experiences, #about-me{
-			padding: 0px 8px 0px 8px;
+			padding: 0px 8px 0px 20px;
 		}
 
 		#projects{
@@ -124,6 +129,23 @@
 		footer p{
 			padding-top: 40px;
 		}
+
+
+		/* for mobiles */
+		 @media only screen and (max-device-width: 480px) {
+			html,body{
+   				width: 100%;
+				height: 100%;
+  				margin: 0px;
+ 				padding: 0px;
+				overflow-x: hidden;
+			}
+			
+			#projects, #experiences, #about-me{
+				padding: 0px 8px 0px 2%;
+			}
+
+  		  }
 
 	</style>
 
